--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ before_install:
 script:
   - docker run oskygh/react-test npm test -- --coverage
 
+install: travis_wait 30 mvn install
+
 after_success:
   - docker build -t oskygh/multi-client ./client
   - docker build -t oskygh/multi-nginx ./nginx
