--- a/.travis.yml
+++ b/.travis.yml
@@ -8,17 +8,15 @@ before_install:
 script:
   - docker run oskygh/react-test npm test -- --coverage
 
-install: travis_wait 30 mvn install
-
 after_success:
-  - docker build -t oskygh/multi-client ./client
-  - docker build -t oskygh/multi-nginx ./nginx
-  - docker build -t oskygh/multi-server ./server
-  - docker build -t oskygh/multi-worker ./worker
+  - travis_wait docker build -t oskygh/multi-client ./client
+  - travis_wait docker build -t oskygh/multi-nginx ./nginx
+  - travis_wait docker build -t oskygh/multi-server ./server
+  - travis_wait docker build -t oskygh/multi-worker ./worker
   #Log in to the docker CLI
-  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+  - travis_wait echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   #Take images to docker hub
-  - docker push oskygh/multi-client
-  - docker push oskygh/multi-nginx
-  - docker push oskygh/multi-server
-  - docker push oskygh/multi-worker
+  - travis_wait docker push oskygh/multi-client
+  - travis_wait docker push oskygh/multi-nginx
+  - travis_wait docker push oskygh/multi-server
+  - travis_wait docker push oskygh/multi-worker
